--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>maven-web-project</artifactId>
   <packaging>war</packaging>
   <version>1.4-SNAPSHOT</version>
-  <name>Maven Web Project 18th August</name>
+  <name>mven</name>
   <description>Maven Web Project for Java Project</description>
 
  <organization>
